recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:6: error: not found: type a
  return last(l[a])
                ^Last:6: error: value l of type List[Int] does not take type parameters.
  return last(l[a])
               ^